Changed the Title!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-	<title>Ashish Lakhani's Portfolio Resume</title>
+	<title>Ashish Lakhani's Portfolio</title>
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
